...
                }
                newGameData.theme =
                    availableThemes.randomElement() ?? Theme.allCases.randomElement()
                    ?? .saffron
                isPresentingNewGameView = true
            }) {
                Text("Create Game")
                    .font(.callout)
                    .fontWeight(.semibold)
                    .foregroundColor(.black)
                    .padding(.vertical, 14)
                    .padding(.horizontal, 20)
                    .background(
...
                    Text("Version \(version) (\(build))")
                        .font(.caption)
                        .foregroundColor(.secondary)
                } label: {
                    Image(systemName: "line.3.horizontal")
                }
                .accessibilityLabel("Menu")
            }
        }
        .sheet(isPresented: $isPresentingNewGameView) {
            NavigationView {
                DetailView(
                    game: Game(data: newGameData),
...
